demo-k8s-buggy-app/src/test/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-k8s-buggy
  labels:
    app: demo-k8s-buggy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-k8s-buggy
  template:
    metadata:
      labels:
        app: demo-k8s-buggy
    spec:
      containers:
      - name: demo-k8s-buggy
        image: quay.io/rhn_support_arolivei/demo-k8s-buggy-app:1.0.1
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        runAsNonRoot: true
        seccompProfile:
        type: RuntimeDefault
        ports:
        - containerPort: 8080
