demo-k8s-buggy-app/src/test/k8s/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: demo-k8s-buggy
  name: demo-k8s-buggy
  namespace: demo-k8s
spec:
  host: demo-k8s-buggy-demo-k8s.apps.example.com
  port:
    targetPort: 8080
  to:
    kind: Service
    name: demo-k8s-buggy
    weight: 100
  wildcardPolicy: None
