demo-k8s-buggy-app/src/test/k8s/service-exposed.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: "2023-11-24T17:30:20Z"
    labels:
      app: demo-k8s-buggy-app
      pod-template-hash: 5864d5485
    name: demo-k8s-buggy-app-5864d5485-knfng
    namespace: demo-k8s
    resourceVersion: "1380235"
    uid: 618d5e61-079c-452b-aed4-2cae9011639a
  spec:
    clusterIP: 10.43.149.19
    clusterIPs:
    - 10.43.149.19
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: demo-k8s-buggy-app
      pod-template-hash: 5864d5485
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
