demo-k8s-buggy-app/src/test/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-k8s-buggy
  name: demo-k8s-buggy
  namespace: demo-k8s
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: demo-k8s-buggy
  type: ClusterIP
